# G4

./: .gitignore  API_doc.md  DOC_AUDIO_TEXT.md  DOC_IMAGE_TEXT.md  README.md  app.py  engine_config.json  pyproject.toml  test_cuda.py  test_smoke.py
app/: main.py
app/core/: inference.py  model.py
app/multimodal/: builder.py
app/routes/: chat.py
scripts/: gemma_engine.py  gemma_start.py  setup_models.py  video_utils.py
static/: app.js  index.html  main.js  style.css
