[project]
name = "gemma-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "aiofiles>=25.1.0",
    "bitsandbytes>=0.49.2",
    "fastapi>=0.135.3",
    "librosa>=0.11.0",
    "opencv-python>=4.13.0.92",
    "python-multipart>=0.0.26",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.2",
    "uvicorn>=0.44.0",
]
